--- a/public/stylesheets/green.css
+++ b/public/stylesheets/green.css
@@ -1,13 +1,15 @@
 #header {
-  background-color: #B8CB99;
-  height: 150px;
+	background: url(../images/avanticagreen_head.png) repeat-x left top;
+  height: 448px;
   width: 100%;
   float: left;
+  text-align:center;
 }
 
 #header #logo {
-  margin: 0 0 0 20%;
-  float: left;
+  margin: 0 auto;
+  clear:both;
+  padding-bottom:54px!important;
 }
 
 #header #login_info {
@@ -17,53 +19,102 @@
 }
 
 #main_menu {
-  margin: 0 0 0 20%;
-  clear: left;
-  float: left;
+  margin: 0 auto;
+  clear: both;
   z-index: 2;
+  display:block;
+  width:600px!important;
 }
 
 #main_menu ul {
   margin: 0;
-  color: black;
-  font-weight: bold;
 }
 
-#main_menu ul li.selected {
+#main_menu ul li.selected{
   float: left;
   list-style: none;
-  padding: 5px;
-  margin: 5px;
+  padding: 0px;
+  margin: 0px;
   margin-bottom: 0;
-  background-color: white;
   cursor: pointer;
+width:166px;
+height:197px;
+color:#55ba26!important;
 }
+#main_menu ul li:hover{
+  float: left;
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+  margin-bottom: 0;
+  cursor: pointer;
+width:166px;
+height:197px;
+color:#55ba26!important;
+}
+#main_menu ul li.selected :hover{
+  padding: 0px!important;
+  margin: 0px!important;
 
+}
 #main_menu ul li {
   float: left;
   list-style: none;
-  padding: 5px;
-  margin: 5px;
+  padding: 0px;
+  margin: 0px;
   margin-bottom: 0;
-  background-color: #e3efd0;
-  font-weight: bold;
   cursor: pointer;
+  cursor: pointer;
+width:166px;
+height:197px;
+text-indent:-5000px;
+display:block;
 }
+
+#main_menu ul li a {
+width:166px;
+height:197px;
+display:block;
+}
+
+#standings{
+	background:url(../images/Avantica-Green-Statistics-32-bck.png) no-repeat center top;
+}
+#infractions{
+	background:url(../images/Avantica-Green-Avatar-32-bck.png) no-repeat center top;
+}
+#players{
+	background:url(../images/Avantica-Green-Group-full-32-bck.png) no-repeat center top;
+}
+
+#standings:hover, #standings.selected{
+	background:url(../images/Avantica-Green-Statistics-32.png) no-repeat center top;
+	}
+	
+#infractions:hover, #infractions.selected{
+	background:url(../images/Avantica-Green-Avatar-32.png) no-repeat center top;
+	}
+#players:hover, #players.selected{
+	background:url(../images/Avantica-Green-Group-full-32.png) no-repeat center top;
+	}
 
 #main_page {
   clear: left;
+  height:100%;
+  overflow:hidden;
 }
 
 #content {
   float: left;
-  padding-left: 15px;
-  width: 70%;
+  padding: 45px 0 0 15px;
+  width: 56%;
+  margin-top:-13px;
+  background:url(../images/transparent-white.png) repeat left top;
+  border-left: #333333 dotted 1px;
 }
 
 #secondary_menu {
-  float: right;
-  background-color: #e3efd0;
-  width: 15%;
+  width: 100%;
   height: 150px;
   padding-left: 5px;
 }
@@ -153,4 +204,52 @@
   -webkit-border-bottom-right-radius: 15px;
   border: 4px solid #B8CB99;
   padding: 10px;
+}
+
+#log_data{float:left;
+width:43%;
+display:block;}
+#login_info{
+    height: 150px;
+    padding-left: 5px;
+    width: 95%;
+	text-align:right;
+	padding-right:40px;
+	}
+	
+#login_info #user_email, #login_info #user_password{
+	height:62px;
+	width:321px;
+	color:#55ba26;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	background-color:#55ba26!important;
+	border:solid 1px #b0dfa7!important;
+	color:#FFF;
+	font-size:20px;
+	padding-left:24px;
+	-webkit-box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+-moz-box-shadow:    0px 2px 5px rgba(0, 0, 0, 0.3);
+box-shadow:         0px 2px 5px rgba(0, 0, 0, 0.3);
+margin-bottom:23px;
+	}
+input[type=checkbox] {display: none;}
+input[type=checkbox]#user_remember_me{
+	height:28px;
+	width:28px;
+display: inline-block;  
+	background: url(../images/check-un.png) 0px 0px no-repeat; 
+	text-indent: -1000em; 
+	}
+	
+input[type=checkbox]#user_remember_me:checked { url(../images/check-goo.png) 0px 0px no-repeat;}
+
+	
+#login_info input[type=submit]{
+	text-indent: -5000px;
+	background:url(../images/leaf-button.png) no-repeat center top;
+	border:none!important;
+	width:102px;
+	height:52px;
 }
