--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -1,7 +1,18 @@
-body { background-color: #fff; color: #333; margin: 0px; }
+@font-face {
+    font-family: 'HelveticaNeueLTStdBold';
+    src: url('helveticaneueltstd-bd-webfont.eot');
+    src: url('helveticaneueltstd-bd-webfont.eot?#iefix') format('embedded-opentype'),
+         url('helveticaneueltstd-bd-webfont.woff') format('woff'),
+         url('helveticaneueltstd-bd-webfont.ttf') format('truetype'),
+         url('helveticaneueltstd-bd-webfont.svg#HelveticaNeueLTStdBold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+body { background:url(../images/squares_bg.gif) #ededed repeat left top; color: #333; margin: 0px; }
 
 body, p, ol, ul, td {
-  font-family: 'Comfortaa', sans-serif;
+  font-family: 'HelveticaNeueLTStdBold';
   font-size:   13px;
   line-height: 18px;
 }
@@ -16,9 +27,13 @@ pre {
   font-size: 11px;
 }
 
-a { color: #000; padding: 5px;}
-a:visited { color: #666; }
-a:hover { color: #fff; background-color:#000; }
+a { color: #000; padding: 0px; text-decoration:none!important;}
+a:visited { color: #55ba26; }
+a:hover {   background: none;
+  cursor: pointer;
+width:166px;
+height:197px;
+color:#55ba26!important; }
 
 a img, a:hover img { border-width: 0; }
 
