Adding filters to 'Show me more' links. Infractions filters are now persisted in the pagination links

--- a/app/views/infractions/index.html.erb
+++ b/app/views/infractions/index.html.erb
@@ -43,7 +43,7 @@
   <% end %>
     <br />
     <div class="pagination">
-      <%= will_paginate @infractions, :container => false %>
+      <%= will_paginate @infractions, :container => false, :params => @infraction_params %>
     </div>
   </div>
 </div>
