Fixing filters for 'Show me more' links

--- a/app/views/infractions/_list.html.erb
+++ b/app/views/infractions/_list.html.erb
@@ -1,4 +1,7 @@
-<% witnesses ||= nil %>
+<%
+  witnesses ||= nil
+  title ||= nil
+%>
   <div class="box">
     <div class="topleft">
     <div class="topright">
