--- a/app/views/infractions/_filter.html.erb
+++ b/app/views/infractions/_filter.html.erb
@@ -2,16 +2,16 @@
   <p id="title">Filter infractions by:</p>
   <%= form_tag(infractions_path, :method => :get) do %>
     <div id="field">
-      Reporter: <%= teams_select(:infraction, :team_id, { :include_blank => true }) %>
+      Reporter: <%= teams_select(:infraction, :team_id, { :include_blank => true, :selected => @infraction_params[:team_id] }) %>
     </div>
     <div id="field">
-      Offender: <%= teams_select(:infraction, :offender_id, { :include_blank => true }) %>
+      Offender: <%= teams_select(:infraction, :offender_id, { :include_blank => true, :selected => @infraction_params[:offender_id] }) %>
     </div>
     <div id="field">
-      Infraction type: <%= infraction_types_select(:infraction, :infraction_type_id, { :include_blank => true }) %>
+      Infraction type: <%= infraction_types_select(:infraction, :infraction_type_id, { :include_blank => true, :selected => @infraction_params[:infraction_type_id] }) %>
     </div>
     <div id="field">
-      Status: <%= statuses_select(:infraction, :status_id, { :include_blank => true }) %>
+      Status: <%= statuses_select(:infraction, :status_id, { :include_blank => true, :selected => @infraction_params[:status_id] }) %>
     </div>
     <div id="submit">
       <%= submit_tag 'Filter' %> or
