--- a/app/views/players/_players.html.erb
+++ b/app/views/players/_players.html.erb
@@ -1,4 +1,5 @@
 <% players ||= @players %>
+<% player_params ||= @player_params %>
 <% context ||= :system %>
 <div>
 <div class="main_box">
@@ -11,7 +12,7 @@
             <div class="page_info">
               <%= page_entries_info players %>
             </div>
-            <%= will_paginate players %>
+            <%= will_paginate players, :params => player_params %>
           </div>
         <% end %>
         <h4>Players:</h4>
