--- a/app/assets/stylesheets/scaffold.css
+++ b/app/assets/stylesheets/scaffold.css
@@ -40,7 +40,7 @@ div.field, div.actions {
   color: white;
   padding: 10px;
 }
-#error {
+#error, #alert {
   background-color: red;
   color: white;
   padding: 10px;
