--- a/app/assets/stylesheets/green.css
+++ b/app/assets/stylesheets/green.css
@@ -69,7 +69,7 @@
 #content {
   float: left;
   padding-left: 15px;
-  width: 70%;
+  width: 100%;
 }
 
 #secondary_menu {
@@ -107,6 +107,19 @@
 #search #submit {
   clear: left;
   padding: 5px 0;
+}
+
+#general_standings {
+  width: 50%;
+  float: left;
+  margin-top: 15px;
+}
+
+#top_reporters {
+  float: left;
+  border-left: 2px solid #B8CB99;
+  margin-top: 15px;
+  padding-left: 20px;
 }
 
 /*comments*/
