--- a/app/views/infractions/_form.html.erb
+++ b/app/views/infractions/_form.html.erb
@@ -14,12 +14,6 @@
   <div class="field">
     <%= f.check_box :anonymous %> Add infraction as anonymous user
   </div>
-  <% if can?(:manage, @infraction) || @infraction.status == Status.pending %>
-    <div class="field">
-      <%= f.label :description %><br />
-      <%= f.text_area :description %>
-    </div>
-  <% end %>
 
   <% if ['new','create'].include?(action_name) || can?(:manage, @infraction) || 
       (@infraction.status == Status.pending && action_name == 'edit') %>
@@ -32,8 +26,14 @@
       <%= infraction_types_select %>
     </div>
     <div class="field">
-      <%= f.label :photo, 'Evidence' %><br />
+      <%= f.label :photo, 'Evidence' %> (supported image types: <%= Infraction::PHOTO_CONTENT_TYPES.join(', ') %>)<br />
       <%= f.file_field :photo %>
+    </div>
+  <% end %>
+  <% if can?(:manage, @infraction) || @infraction.status == Status.pending %>
+    <div class="field">
+      <%= f.label :description %><br />
+      <%= f.text_area :description %>
     </div>
   <% end %>
   <% if action_name == 'edit' && can?(:manage, @infraction) %>
