Allowing infraction types to be hidden so they can't be chosen when creating an infraction

--- a/app/views/infraction_types/index.html.erb
+++ b/app/views/infraction_types/index.html.erb
@@ -6,6 +6,7 @@
     <th>Points</th>
     <th>Description</th>
     <th>Active</th>
+    <th>Hidden</th>
     <th></th>
     <th></th>
     <th></th>
@@ -17,6 +18,7 @@
     <td><%= infraction_type.points %></td>
     <td><%= infraction_type.description %></td>
     <td><%= infraction_type.active %></td>
+    <td><%= infraction_type.hidden %></td>
     <td><%= link_to 'Show', infraction_type %></td>
     <td><%= link_to 'Edit', edit_infraction_type_path(infraction_type) %></td>
     <td><%= link_to 'Destroy', infraction_type, :confirm => 'Are you sure?', :method => :delete %></td>
