--- a/app/views/infraction_types/_form.html.erb
+++ b/app/views/infraction_types/_form.html.erb
@@ -16,9 +16,9 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-      <%= f.label :active %><br />
-      <%= f.check_box :active %>
-    </div>
+    <%= f.label :active %><br />
+    <%= f.check_box :active %>
+  </div>
   <div class="field">
     <%= f.label :points %><br />
     <%= f.text_field :points %>
@@ -26,6 +26,10 @@
   <div class="field">
     <%= f.label :description %><br />
     <%= f.text_area :description %>
+  </div>
+  <div class="field">
+    <%= f.label :hidden %><br />
+    <%= f.check_box :hidden %>
   </div>
   <div class="actions">
     <%= f.submit %>
