--- a/app/views/comments/_form.erb
+++ b/app/views/comments/_form.erb
@@ -11,17 +11,23 @@
   <%= link_to 'Cancel', comment, :remote => true %>
 <% end %>
   <%= form_for(comment, :remote => true) do |f| %>
-    <div class="field">
-      <%= f.check_box :anonymous %> Add comment as anonymous user
-    </div>
-    <div class="field">
-      <%= f.label :description, 'Comment' %><br />
-      <%= f.text_area :description, :rows => 5 %>
-    </div>
-    <div class="field">
-      <%= f.label :post_type_id, 'Comment type' %><br />
-      <%= comment_types_select %>
-    </div>
+    <% if display_form_field?(:anonymous) %>
+      <div class="field">
+        <%= f.check_box :anonymous %> Add comment as anonymous user
+      </div>
+    <% end %>
+    <% if display_form_field?(:description) %>
+      <div class="field">
+        <%= f.label :description, 'Comment' %><br />
+        <%= f.text_area :description, :rows => 5 %>
+      </div>
+    <% end %>
+    <% if display_form_field?(:post_type_id) %>
+      <div class="field">
+        <%= f.label :post_type_id, 'Comment type' %><br />
+        <%= comment_types_select %>
+      </div>
+    <% end %>
     <div class="actions">
       <%= f.submit %>
     </div>
