--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -11,22 +11,29 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :start_date %><br />
-    <%= f.datetime_select :start_date %>
-  </div>
-  <div class="field">
-    <%= f.label :end_date %><br />
-    <%= f.datetime_select :end_date %>
-  </div>
-  <div class="field">
-    <%= f.label :active %><br />
-    <%= f.check_box :active %>
-  </div>
+  <% if display_form_field?(:name) %>
+    <div class="field">
+      <%= f.label :name %><br />
+      <%= f.text_field :name %>
+    </div>
+  <% end %>
+  <% if display_form_field?(:start_date) %>
+    <div class="field">
+      <%= f.label :start_date %><br />
+      <%= f.datetime_select :start_date %>
+    </div>
+  <% end %>
+  <% if display_form_field?(:end_date) %>
+    <div class="field">
+      <%= f.label :end_date %><br />
+      <%= f.datetime_select :end_date %>
+    </div>
+  <% end %>
+  <% if display_form_field?(:active) %>
+    <div class="field">
+      <%= f.check_box :active %> <%= f.label :active %>
+    </div>
+  <% end %>
   <div class="actions">
     <%= f.submit %>
   </div>
