--- a/app/views/infraction_types/_form.html.erb
+++ b/app/views/infraction_types/_form.html.erb
@@ -11,26 +11,34 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :active %><br />
-    <%= f.check_box :active %>
-  </div>
-  <div class="field">
-    <%= f.label :points %><br />
-    <%= f.text_field :points %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </div>
-  <div class="field">
-    <%= f.label :hidden %><br />
-    <%= f.check_box :hidden %>
-  </div>
+  <% if display_form_field?(:name) %>
+    <div class="field">
+      <%= f.label :name %><br />
+      <%= f.text_field :name %>
+    </div>
+  <% end %>
+  <% if display_form_field?(:active) %>
+    <div class="field">
+      <%= f.check_box :active %> <%= f.label :active %>
+    </div>
+  <% end %>
+  <% if display_form_field?(:points) %>
+    <div class="field">
+      <%= f.label :points %><br />
+      <%= f.text_field :points %>
+    </div>
+  <% end %>
+  <% if display_form_field?(:description) %>
+    <div class="field">
+      <%= f.label :description %><br />
+      <%= f.text_area :description %>
+    </div>
+  <% end %>
+  <% if display_form_field?(:hidden) %>
+    <div class="field">
+      <%= f.check_box :hidden %> <%= f.label :hidden %>
+    </div>
+  <% end %>
   <div class="actions">
     <%= f.submit %>
   </div>
