--- a/app/views/infractions/_form.html.erb
+++ b/app/views/infractions/_form.html.erb
@@ -11,32 +11,37 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.check_box :anonymous %> Add infraction as anonymous user
-  </div>
+  <% if display_form_field?(:anonymous) %>
+    <div class="field">
+      <%= f.check_box :anonymous %> Add infraction as anonymous user
+    </div>
+  <% end %>
 
-  <% if ['new','create'].include?(action_name) || can?(:manage, @infraction) || 
-      (@infraction.status == Status.pending && action_name == 'edit') %>
+  <% if display_form_field?(:offender_id) %>
     <div class="field">
       <%= f.label :offender_id %><br />
       <%= teams_select(:infraction, :offender_id) %>
     </div>
+  <% end %>
+  <% if display_form_field?(:infraction_type_id) %>
     <div class="field">
       <%= f.label :infraction_type_id %><br />
       <%= infraction_types_select %>
     </div>
+  <% end %>
+  <% if display_form_field?(:photo) %>
     <div class="field">
       <%= f.label :photo, 'Evidence' %> (supported image types: <%= Infraction::PHOTO_CONTENT_TYPES.join(', ') %>)<br />
       <%= f.file_field :photo %>
     </div>
   <% end %>
-  <% if can?(:manage, @infraction) || @infraction.status == Status.pending %>
+  <% if display_form_field?(:description) %>
     <div class="field">
       <%= f.label :description %><br />
       <%= f.text_area :description %>
     </div>
   <% end %>
-  <% if action_name == 'edit' && can?(:manage, @infraction) %>
+  <% if display_form_field?(:status_id) %>
     <div class="field">
       <%= f.label :status_id %><br />
       <%= statuses_select(:infraction) %>
