--- a/app/views/suggestions/_form.html.erb
+++ b/app/views/suggestions/_form.html.erb
@@ -11,18 +11,24 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.check_box :anonymous %> Add suggestion as anonymous user
-  </div>
-  <div class="field">
-    <%= f.label :description, 'Suggestion' %><br />
-    <%= f.text_area :description %>
-  </div>
-  <div class="field">
-    <%= f.label :post_type_id, 'Suggestion type' %><br />
-    <%= suggestion_types_select %>
-  </div>
-  <% if action_name == 'edit' && can?(:manage, @suggestion) %>
+  <% if display_form_field?(:anonymous) %>
+    <div class="field">
+      <%= f.check_box :anonymous %> Add suggestion as anonymous user
+    </div>
+  <% end %>
+  <% if display_form_field?(:description) %>
+    <div class="field">
+      <%= f.label :description, 'Suggestion' %><br />
+      <%= f.text_area :description %>
+    </div>
+  <% end %>
+  <% if display_form_field?(:post_type_id) %>
+    <div class="field">
+      <%= f.label :post_type_id, 'Suggestion type' %><br />
+      <%= suggestion_types_select %>
+    </div>
+  <% end %>
+  <% if display_form_field?(:status_id) %>
     <div class="field">
       <%= f.label :status_id %><br />
       <%= statuses_select(:suggestion) %>
