--- a/app/views/infraction_types/index.html.erb
+++ b/app/views/infraction_types/index.html.erb
@@ -19,9 +19,9 @@
     <td><%= infraction_type.description %></td>
     <td><%= infraction_type.active %></td>
     <td><%= infraction_type.hidden %></td>
-    <td><%= link_to 'Show', infraction_type %></td>
-    <td><%= link_to 'Edit', edit_infraction_type_path(infraction_type) %></td>
-    <td><%= link_to 'Destroy', infraction_type, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= show_link infraction_type %></td>
+    <td><%= edit_link edit_infraction_type_path(infraction_type) %></td>
+    <td><%= destroy_link infraction_type %></td>
   </tr>
 <% end %>
 </table>
