--- a/app/views/witnesses/index.html.erb
+++ b/app/views/witnesses/index.html.erb
@@ -18,7 +18,7 @@
       <td><%= link_to 'Edit', edit_witness_path(witness) %></td>
     <% end %>
     <% if can?(:destroy, witness) %>
-      <td><%= link_to 'Unassign', witness, :confirm => 'Are you sure?', :method => :delete %></td>
+      <td><%= link_to 'Unassign', witness, data: { confirm: 'Are you sure?' }, method: :delete %></td>
     <% end %>
   </tr>
 <% end %>
@@ -26,6 +26,6 @@
 
 <br />
 
-<% if can?(:create, Witness.new(:infraction => @infraction)) %>
+<% if can?(:create, Witness.new(infraction: @infraction)) %>
   <%= link_to 'New Witness', new_witness_path %>
 <% end %>
